--- a/index.html
+++ b/index.html
@@ -3,24 +3,63 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="navbar.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
     <title>Title</title>
 </head>
 <body>
-    <div style="width: 350px; border: 3px solid black; margin: 90px auto; padding: 10px; border-radius: 10px; box-shadow: 0 0 15px #cecece;">
-        <img src="/img/image.jpeg" alt="ini foto" style="width: 300px; border-radius: 10px 10px 0 0; margin: 20px;">
-        <h1>Dionovan Ramadhani</h1>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequatur, quisquam doloribus! Reprehenderit magnam doloribus nihil! Dicta est consequuntur eum praesentium.</p>
+    <nav>
+        <div class="nav-left">
+            <ul>
+                <li><img src="img/logo.png" alt="logo"></li>
+                <li><a class="active" href="index.html">Home</a></li>
+                <li><a href="#">Blog</a></li>
+            </ul>
+        </div>
+        <div class="nav-right">
+            <a href="contact.html">Contact</a>
+        </div>
+    </nav>
 
-        <table style="border: 1px solid black; width: 100%; text-align: center; border-collapse: collapse; margin-bottom: 10px;">
-            <tr style="background-color: grey; color: white;">
-                <th style="border: 1px solid black;">Experience</th>
-                <th style="border: 1px solid black;">Year</th>
-            </tr>
-            <tr>
-                <td style="border: 1px solid black;">Game Developer</td>
-                <td style="border: 1px solid black;">2077</td>
-            </tr>
-        </table>
-    </div>
+    <section>
+        <div class="container">
+            <div class="lef">
+                <div style="width: 350px; border: 3px solid black; padding: 10px; border-radius: 10px; box-shadow: 0 0 15px #cecece;">
+                    <img src="/img/image.jpeg" alt="ini foto" style="width: 300px; border-radius: 10px 10px 0 0; margin: 20px;">
+                    <h1>Dionovan Ramadhani</h1>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequatur, quisquam doloribus! Reprehenderit magnam doloribus nihil! Dicta est consequuntur eum praesentium.</p>
+
+                    <div style="margin: 5px 0;">
+                        <i class="fa-brands fa-facebook"></i>
+                        <i class="fa-brands fa-youtube"></i>
+                        <i class="fa-brands fa-twitter"></i>
+                    </div>
+    
+                    <table style="border: 1px solid black; width: 100%; text-align: center; border-collapse: collapse; margin-bottom: 10px;">
+                        <tr style="background-color: grey; color: white;">
+                            <th>Experience</th>
+                            <th>Year</th>
+                        </tr>
+                        <tr>
+                            <td>Game Developer</td>
+                            <td>2077</td>
+                        </tr>
+                    </table>
+                </div>
+            </div>
+
+            <div class="right">
+                <h2>What I do?</h2>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nisi similique atque temporibus saepe molestias aspernatur quae, maiores modi distinctio? Illum blanditiis eligendi cum odio, repudiandae culpa at quibusdam laborum rerum.</p>
+
+                <div>
+                    <img src="img/logo.png" alt="" style="width: 20%;">
+                    <h2>Javascript</h2>
+                </div>
+            </div>
+            
+        </div>
+    </section>
 </body>
 </html>
